--- a/trunk/shaman/ui/qtpacman.qrc
+++ b/trunk/shaman/ui/qtpacman.qrc
@@ -8,6 +8,7 @@
         <file>icons/bookmark-new-list.png</file>
         <file>icons/dialog-cancel.png</file>
         <file>icons/dialog-ok-apply.png</file>
+        <file>icons/document-encrypt.svg</file>
         <file>icons/document-open-folder.png</file>
         <file>icons/document-open-remote.png</file>
         <file>icons/document-open.png</file>
